--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vysor.io",
   "version": "0.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
