--- a/public/app/manifest.json
+++ b/public/app/manifest.json
@@ -2,7 +2,7 @@
   "name": "Vysor",
   "short_name": "Vysor",
   "description": "A window to your Android",
-  "version": "1.0.7.2",
+  "version": "1.0.7.4",
   "minimum_chrome_version": "48",
   "sockets": {
     "tcp": {
@@ -58,6 +58,7 @@
   "manifest_version": 2,
   "permissions": [
     "identity",
+    "identity.email",
     "app.window.fullscreen",
     "nativeMessaging",
     "browser",
