--- a/public/app/manifest.json
+++ b/public/app/manifest.json
@@ -2,7 +2,7 @@
   "name": "Vysor",
   "short_name": "Vysor",
   "description": "A window to your Android",
-  "version": "1.1.2.0",
+  "version": "1.1.2.3",
   "minimum_chrome_version": "48",
   "sockets": {
     "tcp": {
@@ -78,6 +78,7 @@
   },
   "manifest_version": 2,
   "permissions": [
+    "audioCapture",
     "identity",
     "identity.email",
     "app.window.fullscreen",
