--- a/public/app/manifest.json
+++ b/public/app/manifest.json
@@ -79,6 +79,7 @@
   },
   "manifest_version": 2,
   "permissions": [
+    "alwaysOnTopWindows",
     "identity",
     "identity.email",
     "app.window.fullscreen",
