--- a/public/app/manifest.json
+++ b/public/app/manifest.json
@@ -2,7 +2,7 @@
   "name": "Vysor",
   "short_name": "Vysor",
   "description": "A window to your Android",
-  "version": "1.2.5",
+  "version": "1.2.8",
   "minimum_chrome_version": "51",
   "sockets": {
     "tcp": {
@@ -66,7 +66,7 @@
   },
   "nacl_modules": [
     {
-      "path": "video_decode/video_decode.nmf",
+      "path": "native/video_decode.nmf",
       "mime_type": "application/x-ppapi-vysor"
     }
   ],
