--- a/public/app/manifest.json
+++ b/public/app/manifest.json
@@ -3,6 +3,7 @@
   "short_name": "Vysor",
   "description": "A window to your Android",
   "version": "1.3.0",
+  "author": "ClockworkMod",
   "minimum_chrome_version": "51",
   "sockets": {
     "tcp": {
