--- a/public/app/manifest.json
+++ b/public/app/manifest.json
@@ -2,7 +2,7 @@
   "name": "Vysor",
   "short_name": "Vysor",
   "description": "A window to your Android",
-  "version": "1.9.6",
+  "version": "2.0.0",
   "author": "ClockworkMod",
   "minimum_chrome_version": "51",
   "sockets": {
@@ -81,6 +81,7 @@
   },
   "manifest_version": 2,
   "permissions": [
+    "audio",
     "alwaysOnTopWindows",
     "identity",
     "identity.email",
