--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,14 @@
 sudo: required
 
 language: node_js
+node_js: "11"
 
 before_install:
   - source ci_scripts/travis_functions.sh
-
 install:
   - travis_install
-
 script:
   - travis_script
-
 after_success:
   - ls ./electron-chrome/build
   - ls ./electron-chrome/build/dist
